--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,11 +1,13 @@
 ul {
     list-style-type: none;
-    margin: 0 auto;
-    padding: 0;
+    margin: 0  auto 10px;
+    padding: 0 10px;
     display: flex;
     align-items: center ;
     width: 75%;
+    
     font-weight: 500;
+    background-color: rgba(233, 225, 225, 0.2);
 
   }
   .ms-auto{
@@ -13,6 +15,7 @@ ul {
   }
   ul li{
       margin: 0 20px;
+      
   }
   .bg-image{
     background-image: url(../../images/bg.jpg);
