--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,4 +1,4 @@
-form input{
+.form-style input{
     width: 100%;
     padding: 5px;
     border: none;
@@ -12,3 +12,7 @@ form input{
      background-color: white;
      border-radius: 10px;
     }
+    .form-style input:focus{
+    outline: none;
+    
+}
