--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -5,7 +5,7 @@
     border-bottom: 1px solid darkgray;
 }
 .form-style{
-    width: 25%;
+    width: 350px;
      margin: auto;
      padding: 50px;
      text-align: center;
